frontend/tests/cases/positive/graded/lambdaApprox.gr
lambdaApprox : Int [0..4] -> Int
lambdaApprox = \[x] -> x