frontend/tests/cases/negative/flatten/flattenLevel.gr
flattenLevel : forall k : Level, l : Level . (Int [k]) [l] -> Int [k /\ l]
flattenLevel [[x]] = [x]
